# PRNG_Wrapper

./: Cargo.toml  README.md
src/: choose_multiple.rs  choose_weighted.rs  gen_range.rs  helper.rs  lib.rs  mod.rs  poisson.rs  rng_wrapper.rs  test.rs
