[package]
name = "py_in_rust"
version = "0.1.0"
edition = "2021"

members=["rng"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.5"
rand_distr = "0.4.3"

pyo3 = "<=0.21.2"
inline-python = {version ="0.12.0", optional = true}
inline-python-macros = {version ="0.12.0", optional = true}

[features]
nightly-features = ["inline-python-macros", "inline-python"]
